# Capter

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml  update_aur.yml
assets/icons/macos/: icon.icns
assets/resources/linux/: capter.desktop  pkgbuild_capter  pkgbuild_capter_bin
src/: action.rs  app.rs  assets.rs  config.rs  consts.rs  ipc.rs  key_listener.rs  main.rs  notify.rs  organize_type.rs  subscription.rs  tray_icon.rs  update.rs  view.rs  window.rs
src/capture/: canvas.rs  crop.rs  draw.rs  image.rs  init.rs  mod.rs  mode.rs  update.rs  view.rs
src/config/: mod.rs  utils.rs
src/entities/: app.rs  capture.rs  config.rs  crop.rs  events.rs  freeform.rs  mod.rs  style.rs  theme.rs  window.rs
src/entities/capture/: mod.rs  shape.rs
src/settings/: init.rs  mod.rs  update.rs  view.rs
src/style/: button.rs  container.rs  mod.rs  svg.rs  text.rs
src/theme/: button.rs  container.rs  menu.rs  mod.rs  picklist.rs  scrollable.rs  slider.rs  text.rs  text_input.rs  toggler.rs
src/utils/: config.rs  ipc.rs  key_listener.rs  mod.rs  tray_icon.rs
src/utils/capture/: crop.rs  endpoints.rs  freeform.rs  fullscreen.rs  mod.rs  shape.rs  window.rs
src/windows/: capture.rs  config.rs  crop.rs  freeform.rs  mod.rs
src/windows/capture/: annotate.rs  mod.rs
src/windows/capture_window/: annotate.rs  capture.rs  mod.rs  models.rs  utils.rs
src/windows/config_window/: config.rs  mod.rs
