[package]
name = "Capter"
version = "3.0.2"
description = "Cross-Platform Screen Capture and Annotation Tool"
edition = "2024"
authors = ["decipher"]
build = "build.rs"

[dependencies]
anyhow = "*"
arboard = { version = "*", features = [
    "wayland-data-control",
    "wl-clipboard-rs",
] }
chrono = { version = "*", default-features = false, features = ["clock"] }
dirs = "*"
edit-xml = "*"
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", default-features = false, features = [
    "advanced",
    "canvas",
    "image",
    "lazy",
    "tokio",
] }
iced_anim = { git = "https://github.com/Brady-Simon/iced_anim.git", branch = "iced/master", features = [
    "derive",
] }
interprocess = { version = "*", features = ["tokio"] }
mouse_position = "*"
opener = "*"
rdev = { git = "https://github.com/rustdesk-org/rdev", branch = "master" }
resvg = { version = "*", default-features = false, features = ["text"] }
rfd = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", default-features = false, features = ["time"] }
toml = { version = "*" }
tray-icon = "*"
xcap = { version = "*", default-features = false }

[target.'cfg( target_os = "windows" )'.dependencies]
win32_notif = "*"

[target.'cfg( target_os = "linux" )'.dependencies]
gtk = "0.18"
notify-rust = { version = "*", features = ["images"] }

[target.'cfg( target_os = "macos")'.dependencies]
notify-rust = { version = "*", features = ["images"] }


[target.'cfg( target_os = "windows" )'.build-dependencies]
winresource = "*"


[package.metadata.winresource]
ProductName = "Capter"
FileDescription = "Capter"

[package.metadata.packager]
product-name = "Capter"
identifier = "io.github.decipher.capter"
authors = ["decipher"]
publisher = "decipher"
category = "Utility"
copyright = "Copyright © decipher"
before-packaging-command = "cargo build --release"
icons = [
    "assets/resources/windows/icon.ico",
    "assets/resources/macos/icon.icns",
    "assets/resources/linux/hicolor/*/apps/capter.png",
]
out-dir = "target/packages"

[package.metadata.packager.wix]
banner-path = "assets/images/wix_banner.png"
dialog-image-path = "assets/images/dialog_image.png"

[package.metadata.packager.windows]
digest-algorithim = "SHA256"
certificate-thumbprint = "07a9c417660868a4420fe9e2f8b6ac2e1a33228a"
tsp = true
timestamp-url = "http://timestamp.digicert.com"

[package.metadata.packager.macos]
minimum-system-version = "10.13"

[package.metadata.packager.deb]
depends = [
    "libgtk-3-dev",
    "libxdo-dev",
    "libayatana-appindicator3-dev",
    "libxcb1",
    "libxrandr2",
    "libdbus-1-3",
]

[package.metadata.packager.pacman]
source = [
    "${pkgname}-${pkgver}.tar.gz::https://github.com/decipher3114/Capter/releases/latest/download/capter_${pkgver}_x86_64.tar.gz",
]
depends = [
    "gtk3",
    "xdotool",
    "libayatana-appindicator",
    "libxcb",
    "libxrandr",
    "dbus",
]
